# ffmpeg_3_simple_player

./: CMakeLists.txt  README.md
cmake/: FindFFMPEG.cmake
lib/: CMakeLists.txt  player.c  player.h
src/: CMakeLists.txt  main.c
